--- a/style/main.css
+++ b/style/main.css
@@ -26,6 +26,8 @@
   --twlo-black: 0, 0, 0;
   --twlo-red: 242, 47, 70;
   --twlo-red-10: 254, 236, 236;
+  --twlo-blue-30: 153, 205, 255;
+  --twlo-blue-60: 2, 99, 224;
   --twlo-blue-90: 3, 11, 93;
   --twlo-blue-100: 6, 3, 58;
   --twlo-blue-20: 204, 228, 255;
@@ -86,7 +88,7 @@ body {
 
 section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
 }
@@ -124,7 +126,19 @@ section {
   color: white;
 }
 
+.theme.is-blue {
+  color: black;
+}
 
+.theme.is-blue .bg:before {
+  background: transparent;
+  color: black;
+}
+
+.theme.is-blue .bg:after {
+  background-color: rgb(var(--twlo-blue-100));
+  color: white;
+}
 
 /* .theme.is-dark .divider {
   transition: background-color 500ms;
