--- a/style/twilion.css
+++ b/style/twilion.css
@@ -4,7 +4,7 @@
   grid-column-gap: 40px;
   grid-row-gap: 0px;
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .twilion-image {
