--- a/style/whatis.css
+++ b/style/whatis.css
@@ -10,7 +10,7 @@
   grid-row-gap: 0px;
   padding: 2rem;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   place-items: center;
   animation: show 1s ease-in backwards;
