--- a/style/main.css
+++ b/style/main.css
@@ -24,6 +24,7 @@
 
 :root {
   --twlo-black: 0, 0, 0;
+  --twlo-white: 255, 255, 255;
   --twlo-red: 242, 47, 70;
   --twlo-red-10: 254, 236, 236;
   --twlo-blue-10: 235, 244, 255;
@@ -33,6 +34,7 @@
   --twlo-blue-100: 6, 3, 58;
   --twlo-blue-20: 204, 228, 255;
   --twlo-orange-10: 254, 245, 238;
+  --venn-size: 30vw;
 }
 
 .relative {
@@ -62,8 +64,20 @@ body {
   line-height: 1.4;
   color: black;
   overflow-x: hidden;
-  transition: color 500ms, background-color 500ms;
   position: relative;
+}
+/* 
+main { 
+  overflow: auto;
+  scroll-snap-type: y mandatory;
+  height: 100vh;
+} */
+
+body,
+.bg,
+.bg:before,
+.bg:after {
+  transition: color 500ms, background-color 500ms;
 }
 
 .bg {
@@ -108,6 +122,7 @@ section {
   min-height: 100vh;
   display: grid;
   place-items: center;
+  scroll-snap-align: start;
 }
 
 .divider {
@@ -127,6 +142,10 @@ section {
 
 .theme.is-pink .bg:before {
   background-color: rgb(var(--twlo-red-10));
+}
+
+.theme.is-pink .bg:after {
+  background-color: rgb(var(--twlo-white));
 }
 
 .theme.is-dark {
