--- a/style/missing.css
+++ b/style/missing.css
@@ -62,6 +62,9 @@
   width: var(--venn-size);
   height: var(--venn-size);
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .missing-venn-circle {
@@ -98,6 +101,7 @@
   text-align: center;
   font-size: calc(var(--venn-size) * 0.04);
   margin-top: 2rem;
+  text-decoration: none;
 }
 
 .missing-venn-circle .missing-link {
@@ -159,4 +163,23 @@
 .missing-venn-bottom-right .missing-link {
   bottom: 20%;
   right: 20%;
+}
+
+.missing-venn-parts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 30%;
+  height: 30%;
+}
+
+.missing-venn-image {
+  position: absolute;
+  opacity: 0;
+  width: 100%;
+}
+
+.js-missing-venn-0 {
+  width: 75%;
 }
